# obsidian-librarian-to-add

./: .gitignore  AGENTS.md  Ben AI OS Setup.md  PLANS.md  README.md  pyproject.toml  sitecustomize.py
.github/workflows/: ci.yml
.specify/: feature.json
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
docs/: 00_overview.md  10_implementation_plan.md  11_pdf_compatibility_plan.md  12_phase_10_vault_librarian_roadmap.md  13_usage_manual.md  14_phase_11_obsidian_ingest_roadmap.md  14_phase_11_obsidian_patron_roadmap.md  15_pr29_webgpt_merge_resolution_instructions.md  16_phase_11_6_local_codex_test_instructions.md  17_llm_integration_roadmap.md  20_dev_stack.md  30_agent_definition.md  31_tool_contracts.md  32_note_schemas.md  40_codex_workflow.md  41_codex_prompts.md  42_codex_skills.md  50_eval_strategy.md  60_reference_map.md  70_second_brain_reference.md  80_visual_map.md  gui_concept.html
docs/plans/: 2026-05-20-sb-os-skill-integration-design.md  (+6 more)
evals/: __init__.py  cases.yaml  run_evals.py
obsidian_librarian/: __init__.py
tests/: __init__.py  test_cli_smoke.py  test_enrich_cli.py  test_evals.py  test_extraction_schema.py  test_extractors.py  test_gui_server.py  test_gui_service.py  test_gui_static.py  test_index_search_cli.py  test_indexer.py  test_ingest.py  test_no_destructive_writes.py  test_note_quality.py  test_parser.py  test_patron_cli.py  test_patron_ingest_phase_11_1_11_2.py  test_patron_phase_11_3_propose.py  test_patron_phase_11_5_linker.py  test_patron_phase_11_6_promotion.py  test_pdf_acceptance.py  test_pdf_classifier.py  test_pdf_docling.py  test_pdf_docling_ocr_real_fixtures.py  test_pdf_docling_real_fixtures.py  test_pdf_fixtures.py  test_pdf_ingest.py  test_pdf_real_fixtures.py  test_pdf_validators.py  test_renderers.py  test_review_quality_cli.py  test_search.py  test_staging_writer.py  test_validators.py
(+49 files in other folders)
