[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-librarian-agent"
version = "0.1.0"
description = "Safe deterministic-first Obsidian librarian CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Denys Kovalov" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]
llm = [
  "openai>=1.40.0"
]
pdf = [
  "docling>=2.70.0"
]
ocr = [
  "docling>=2.70.0"
]

[project.scripts]
obsidian-librarian = "obsidian_librarian.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
